--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         </div>
       </div>
       <div class="project-section">
+        <!-- bg yha yayega -->
         <h2 class="page-header">Projects</h2>
         <div class="project-container">
           <div class="project-card" id="project1">
@@ -334,7 +335,7 @@
         strings: [
           "Full Stack Developer",
           "Web developer",
-          "UI-UX Designer",
+          "Mern Developer",
           "Coder",
         ],
         loop: true,
