--- a/index.html
+++ b/index.html
@@ -78,10 +78,9 @@
                 <img class="project-skills" src="Redux.svg" alt="" />
                 <img class="project-skills" src="Vercel.svg" alt="" />
               </div>
-              <h2 class="project-heading">Tint & Orange</h2>
+              <h2 class="project-heading">Weather App</h2>
               <p class="project-sub-heading">
-                Its is a car modification copany which provide you sheets to
-                protect your car from scratch
+                Weather Web App built with HTML, CSS, JavaScript, and the concept of Fetch API! This dynamic app fetches real-time weather data, presenting it in a user-friendly interface. 
               </p>
 
               <div class="btn-grp">
@@ -111,9 +110,9 @@
                 <img class="project-skills" src="Redux.svg" />
                 <img class="project-skills" src="Vercel.svg" />
               </div>
-              <h2 class="project-heading">Breaking Copyrights</h2>
+              <h2 class="project-heading">Voice Assistant</h2>
               <p class="project-sub-heading">
-                A platform to download copyrights free youtube music
+                Developed a simple Voice Assistant that can takes voice input from user. 
               </p>
               <div class="btn-grp">
                 <button class="btn-pink btn- project">Read More</button>
@@ -142,10 +141,9 @@
                 <img class="project-skills" src="Redux.svg" />
                 <img class="project-skills" src="Vercel.svg" />
               </div>
-              <h2 class="project-heading">Isha Tattva</h2>
+              <h2 class="project-heading">Password Generator</h2>
               <p class="project-sub-heading">
-                A website for interior designer to showcase her works and
-                samples
+                It is used for generating random passwords.
               </p>
               <div class="btn-grp">
                 <button class="btn-pink btn-project">Read More</button>
@@ -175,10 +173,9 @@
                 <img class="project-skills" src="Redux.svg" />
                 <img class="project-skills" src="Vercel.svg" />
               </div>
-              <h2 class="project-heading">Granit</h2>
+              <h2 class="project-heading">Razorpay Clone: </h2>
               <p class="project-sub-heading">
-                A architectural website to plan your building or home (Hebrew
-                Language)
+                UI of Razorpay 
               </p>
               <div class="btn-grp">
                 <button class="btn-pink btn- project">Read More</button>
